--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Fauna+One|Playfair+Display&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/40c9669dbd.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Karen Watson Garden Design</title>
   </head>
@@ -33,6 +37,7 @@
       </div>
     </header>
     <section id="home">
+      <div class="logo-responsive">KAREN WATSON GARDEN DESIGN</div>
       <h1>
         RHS-Certified Garden Designer, <br />
         Residential Garden Design & Implementation
@@ -53,12 +58,37 @@
         to full landscaping redesign.
       </p>
     </section>
+
     <section id="contact">
       <h1>Contact</h1>
-      <p>
-        K@KarenWatsonGardenDesign.co.uk<br />07338 718 023<br />Ragdale,
-        Leicestershire, LE14
-      </p>
+      <div class="contact">
+        <p>
+          <i class="fas fa-envelope" style="color:#669933"></i>
+          K@KarenWatsonGardenDesign.co.uk<br /><i
+            class="fas fa-phone-square-alt"
+            style="color:#669933"
+          ></i>
+          07338 718 023<br /><i
+            class="fas fa-thumbtack"
+            style="color:#669933;"
+          ></i>
+          Ragdale, Leicestershire, LE14 3PP
+        </p>
+      </div>
+      <div class="contact-responsive">
+        <p>
+          <i class="fas fa-envelope" style="color:#669933"></i>
+          K@KarenWatsonGardenDesign.co.uk<br /><i
+            class="fas fa-phone-square-alt"
+            style="color:#669933"
+          ></i>
+          07338 718 023<br /><i
+            class="fas fa-thumbtack"
+            style="color:#669933;"
+          ></i>
+          Ragdale, Leicestershire, LE14 3PP
+        </p>
+      </div>
     </section>
 
     <script src="script.js"></script>
