--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </header>
     <section id="home">
-      <div class="logo-responsive">KAREN WATSON GARDEN DESIGN</div>
+      <div class="logo-responsive">KAREN WATSON <br />GARDEN DESIGN</div>
       <h1>
         RHS-Certified Garden Designer, <br />
         Residential Garden Design & Implementation
