--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <h1>Contact</h1>
       <div class="contact">
         <p>
+          To discuss your garden, contact:<br />
           <i class="fas fa-envelope" style="color:#669933"></i>
           K@KarenWatsonGardenDesign.co.uk<br /><i
             class="fas fa-phone-square-alt"
@@ -90,6 +91,7 @@
         </p>
       </div>
     </section>
+    <footer>© 2020 Karen Watson, all rights reserved.</footer>
 
     <script src="script.js"></script>
   </body>
