--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
           Ragdale, Leicestershire, LE14 3PP
         </p>
       </div>
+      <div class="photo">
+        <img src="../assets/karen.jpg" alt="profile photo of karen watson" />
+      </div>
     </section>
     <footer>© 2020 Karen Watson, all rights reserved.</footer>
 
