--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     <section id="home">
       <div class="logo-responsive">KAREN WATSON <br />GARDEN DESIGN</div>
       <h1>
-        RHS-Certified Garden Designer, <br />
+        Qualified Horticulturalist And Garden Designer, <br />
         Residential Garden Design & Implementation
       </h1>
     </section>
     <section id="about">
       <h1 id="abouttext">About</h1>
       <p id="abouttext">
-        Located on the Leicestershire and Nottinghamshire border, I am a
-        qualified horticulturalist and garden designer, with experience of
+        Located on the Leicestershire and Nottinghamshire border, I am an
+        RHS-qualified horticulturalist and garden designer, with experience of
         designing both simple and complex garden landscapes.
       </p>
     </section>
@@ -69,7 +69,7 @@
             class="fas fa-phone-square-alt"
             style="color:#669933"
           ></i>
-          07338 718 023<br /><i
+          07338 728 012<br /><i
             class="fas fa-thumbtack"
             style="color:#669933;"
           ></i>
