--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
         <img src="../assets/karen.jpg" alt="profile photo of karen watson" />
       </div>
     </section>
-    <footer>© 2020 Karen Watson, all rights reserved.</footer>
+    <footer>
+      © 2020 Karen Watson, all rights reserved. Web development by
+      <a href="https://www.edwardwatson.com/" id="footerlink"
+        >EdwardWatson.com</a
+      >.
+    </footer>
 
     <script src="script.js"></script>
   </body>
