--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <footer>
       © 2020 Karen Watson, all rights reserved. Web development by
-      <a href="https://www.edwardwatson.com/" id="footerlink"
+      <a href="https://www.edwardwatson.com/" id="footerlink" target="_blank"
         >EdwardWatson.com</a
       >.
     </footer>
