--- a/index.html
+++ b/index.html
@@ -95,12 +95,10 @@
       </div>
     </section>
     <footer>
-      © 2020 Karen Watson, all rights reserved. Web development by
+      © 2020 Karen Watson, all rights reserved. Web by
       <a href="https://www.edwardwatson.com/" id="footerlink" target="_blank"
         >EdwardWatson.com</a
       >.
     </footer>
-
-    <script src="script.js"></script>
   </body>
 </html>
