--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </section>
     <footer>
-      © 2020 Karen Watson, all rights reserved. Web by
+      © 2020 Karen Watson. Web by
       <a href="https://www.edwardwatson.com/" id="footerlink" target="_blank"
         >EdwardWatson.com</a
       >.
