add link to photo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         </p>
       </div>
       <div class="photo">
-        <img src="../assets/karen.jpg" alt="profile photo of karen watson" />
+        <a href="https://www.linkedin.com/in/karen-watson-fcips-3a9242b/">
+          <img src="../assets/karen.jpg" alt="profile photo of karen watson"
+        /></a>
       </div>
     </section>
     <footer>
